src/kubernetes/apps/media/prowlarr/manifests/ingress.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: prowlarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prowlarr.valhallahub.nl
    external-dns.alpha.kubernetes.io/target: 78.20.55.48
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
  hostnames:
  - prowlarr.valhallahub.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prowlarr
      port: 9696
